contrast fix

--- a/Bountiful_Foods/styles/large.css
+++ b/Bountiful_Foods/styles/large.css
@@ -70,6 +70,8 @@
     .menu a {
         text-shadow: 2px 2px 2px rgb(136, 214, 136);
         font-size: 1.5rem;
+        background-color: white;
+        border-radius: 46px;
     }
 
     h1 {
